--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/style.css">
     <!-- boostTrap css -->
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./node_modules/bootstrap-icons/font/bootstrap-icons.css">
@@ -231,14 +231,16 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerar</button>
                     <button type="button" class="btn btn-primary">Enviar</button>
-                </div>
+                </div> 
             </div>
         </div>
     </div>
 
     <!-- footer -->
-    <div class="container-fluid">
-        <div class="row p-5 bg-primary text-white">
+    <footer>
+
+        <div class="container-fluid">
+            <div class="row p-5 text-white">
             <div class="col-xs-12 col-md-6 col-lg-3">
                 <p class="h3">ViajaGuarin</p>
                 <p>@2023</p>
@@ -271,6 +273,7 @@
             </div>
         </div>
     </div>
+</footer>
 </body>
 
 <!-- Para jQuery -->
